--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -35,6 +35,7 @@
     "iso-datestring-validator": "^2.2.2",
     "joi": "^17.10.2",
     "lodash": "^4.17.21",
+    "postgres-date": "^2.1.0",
     "wkt-parser": "^1.3.3"
   },
   "devDependencies": {
