--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@changesets/changelog-git": "^0.1.14",
     "@changesets/cli": "^2.26.2",
     "@commitlint/config-conventional": "^18.4.2",
-    "@koopjs/auth-direct-file": "^2.0.2",
+    "@koopjs/auth-direct-file": "^3.0.0-alpha.0",
     "@koopjs/provider-file-geojson": "^2.2.0",
     "await-spawn": "^4.0.2",
     "byline": "^5.0.0",
