--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -36,6 +36,7 @@
     "joi": "^17.12.0",
     "lodash": "^4.17.21",
     "postgres-date": "^2.1.0",
+    "protobufjs": "^7.2.5",
     "wkt-parser": "^1.3.3"
   },
   "devDependencies": {
