--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 node_modules
 coverage
 coverage_unit
+coverage_changes
+coverage.json
 .nyc_output
 .nyc_output_unit
+.nyc_output_changes
 .vscode
 **/.DS_Store
 .env
 .npmrc
+ci/branch-coverage-changes.md
