--- a/packages/cache-memory/package.json
+++ b/packages/cache-memory/package.json
@@ -4,10 +4,13 @@
   "description": "An in-memory cache for KOop",
   "main": "src/index.js",
   "scripts": {
-    "test": "tape src/**/*.spec.js | tap-spec",
+    "test": "tape src/**/*.spec.js | tap-spec > /dev/null",
     "test:cov:unit": "nyc -r=json-summary tape './src/**/*.spec.js' | tap-spec && npm run cov:badge",
     "test:cov": "nyc -r=json-summary tape './src/**/*.spec.js' | tap-spec && npm run cov:badge",
-    "cov:badge": "coverage-badges-cli --output ./coverage.svg"
+    "cov:badge": "coverage-badges-cli --output ./coverage.svg",
+    "test:quiet": "npm test > /dev/null",
+    "test:cov:changes": "node ../../ci/run-coverage-on-branch-changes.js",
+    "clean:cov": "node ../../ci/clean-coverage.js"
   },
   "repository": {
     "type": "git",
