--- a/packages/output-geoservices/package.json
+++ b/packages/output-geoservices/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "test:cov:unit": "jest --coverage && npm run cov:badge",
     "test:cov": "jest --coverage && npm run cov:badge",
-    "cov:badge": "coverage-badges --output ./coverage.svg"
+    "cov:badge": "coverage-badges --output ./coverage.svg",
+    "test:cov:changes": "jest --coverage --changedSince=master --coverageDirectory=coverage_changes --silent > /dev/null",
+    "clean:cov": "node ../../ci/clean-coverage.js"
   },
   "repository": {
     "type": "git",
