--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
     "commit": "cz",
     "precommit": "lint-staged && npm test --workspaces",
     "test": "npm test --workspaces",
-    "test:cov": "npm run test:cov --workspaces && npm run cov:compile && npm run cov:report",
+    "test:cov": "npm run test:cov --workspaces --silent && npm run cov:compile:full && npm run cov:report:full",
     "test:cov:unit": "npm run test:cov:unit --workspaces && npm run cov:compile:unit && npm run cov:report:unit",
-    "cov:compile": "nyc merge packages/cache-memory/.nyc_output .nyc_output/cache-memory.json && nyc merge packages/featureserver/.nyc_output .nyc_output/featureserver.json && nyc merge packages/core/.nyc_output .nyc_output/core.json && nyc merge packages/logger/.nyc_output .nyc_output/logger.json && cp packages/output-geoservices/coverage/coverage-final.json .nyc_output/output-geoservices.json && nyc merge packages/winnow/.nyc_output .nyc_output/winnow.json",
-    "cov:compile:unit": "nyc merge packages/cache-memory/.nyc_output .nyc_output_unit/cache-memory.json && nyc merge packages/featureserver/.nyc_output_unit .nyc_output_unit/featureserver.json && nyc merge packages/core/.nyc_output .nyc_output_unit/core.json && nyc merge packages/logger/.nyc_output .nyc_output_unit/logger.json && cp packages/output-geoservices/coverage/coverage-final.json .nyc_output_unit/output-geoservices.json && nyc merge packages/winnow/.nyc_output_unit .nyc_output_unit/winnow.json",
-    "cov:report": "nyc report --reporter=html",
+    "test:cov:changes": "npm run test:cov:changes --workspaces --silent && npm run cov:compile:changes && npm run cov:report:changes",
+    "cov:compile": "nyc merge packages/cache-memory/$OUT_DIR $OUT_DIR/cache-memory.json 2>/dev/null || : && nyc merge packages/featureserver/$OUT_DIR $OUT_DIR/featureserver.json 2>/dev/null || : && nyc merge packages/core/$OUT_DIR $OUT_DIR/core.json 2>/dev/null || : && nyc merge packages/logger/$OUT_DIR $OUT_DIR/logger.json 2>/dev/null || : && cp packages/output-geoservices/$GEO_DIR/coverage-final.json $OUT_DIR/output-geoservices.json 2>/dev/null || : && nyc merge packages/winnow/$OUT_DIR $OUT_DIR/winnow.json 2>/dev/null || :",
+    "cov:compile:full": "OUT_DIR=.nyc_output GEO_DIR=coverage npm run cov:compile --silent",
+    "cov:compile:unit": "OUT_DIR=.nyc_output_unit GEO_DIR=coverage npm run cov:compile",
+    "cov:compile:changes": "OUT_DIR=.nyc_output_changes GEO_DIR=coverage_changes npm run cov:compile",
+    "cov:report:full": "nyc report --reporter=html",
     "cov:report:unit": "nyc report --temp-dir=.nyc_output_unit --report-dir=coverage_unit --reporter=html",
+    "cov:report:changes": "nyc report --temp-dir=.nyc_output_changes --report-dir=coverage_changes --reporter=json-summary",
     "test:e2e": "cross-env SUPPRESS_NO_CONFIG_WARNING=true DATA_DIR=./test/provider-data jest",
     "version": "changeset version",
     "release:npm": "changeset publish",
     "release:github": "node gh-release.js",
     "changeset:add": "changeset",
-    "demo": "node demo/index.js"
+    "demo": "node demo/index.js",
+    "clean:cov": "node ci/clean-coverage.js && npm run clean:cov --workspaces",
+    "cov:md": "node ci/format-branch-coverage-changes.js"
   },
   "repository": {
     "type": "git",
@@ -62,11 +68,14 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-coverage-badges-ng": "^1.0.1",
+    "json2md": "^2.0.1",
     "lerna": "^8.1.2",
     "lerna-changelog": "^2.2.0",
     "lint-staged": "^15.2.2",
     "nyc": "^15.1.0",
     "prettier": "^3.2.5",
+    "shelljs": "^0.8.5",
+    "simple-git": "^3.22.0",
     "snyk": "^1.1280.0",
     "supertest": "^6.3.4"
   },
