--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -70,6 +70,9 @@
     "test": "mocha '**/*.spec.js' ",
     "test:cov:unit": "nyc -r=json-summary mocha '**/*.spec.js' && npm run cov:badge",
     "test:cov": "nyc -r=json-summary mocha '**/*.spec.js' && npm run cov:badge",
-    "cov:badge": "coverage-badges-cli --output ./coverage.svg"
+    "cov:badge": "coverage-badges-cli --output ./coverage.svg",
+    "test:quiet": "npm test > /dev/null",
+    "test:cov:changes": "node ../../ci/run-coverage-on-branch-changes.js",
+    "clean:cov": "node ../../ci/clean-coverage.js"
   }
 }
