--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
     "commit": "cz",
     "precommit": "lint-staged && npm test --workspaces",
     "test": "npm test --workspaces",
-    "test:cov": "npm run test:cov --workspaces --silent && npm run cov:compile:full && npm run cov:report:full",
-    "test:cov:unit": "npm run test:cov:unit --workspaces && npm run cov:compile:unit && npm run cov:report:unit",
-    "test:cov:changes": "npm run test:cov:changes --workspaces --silent && npm run cov:compile:changes && npm run cov:report:changes",
-    "cov:compile": "nyc merge packages/cache-memory/$OUT_DIR $OUT_DIR/cache-memory.json 2>/dev/null || : && nyc merge packages/featureserver/$OUT_DIR $OUT_DIR/featureserver.json 2>/dev/null || : && nyc merge packages/core/$OUT_DIR $OUT_DIR/core.json 2>/dev/null || : && nyc merge packages/logger/$OUT_DIR $OUT_DIR/logger.json 2>/dev/null || : && cp packages/output-geoservices/$GEO_DIR/coverage-final.json $OUT_DIR/output-geoservices.json 2>/dev/null || : && nyc merge packages/winnow/$OUT_DIR $OUT_DIR/winnow.json 2>/dev/null || :",
+    "test:e2e": "cross-env SUPPRESS_NO_CONFIG_WARNING=true DATA_DIR=./test/provider-data jest",
+    "cov:full": "npm run cov:full --workspaces --silent && npm run cov:compile:full && npm run cov:report:full",
+    "cov:unit": "npm run cov:unit --workspaces && npm run cov:compile:unit && npm run cov:report:unit",
+    "cov:changes": "npm run cov:changes --workspaces --silent && npm run cov:compile:changes && npm run cov:report:changes",
+    "cov:compile": "rm -rf .nyc_output_changes && nyc merge packages/cache-memory/$OUT_DIR $OUT_DIR/cache-memory.json 2>/dev/null || : && nyc merge packages/featureserver/$OUT_DIR $OUT_DIR/featureserver.json 2>/dev/null || : && nyc merge packages/core/$OUT_DIR $OUT_DIR/core.json 2>/dev/null || : && nyc merge packages/logger/$OUT_DIR $OUT_DIR/logger.json 2>/dev/null || : && cp packages/output-geoservices/$GEO_DIR/coverage-final.json $OUT_DIR/output-geoservices.json 2>/dev/null || : && nyc merge packages/winnow/$OUT_DIR $OUT_DIR/winnow.json 2>/dev/null || :",
     "cov:compile:full": "OUT_DIR=.nyc_output GEO_DIR=coverage npm run cov:compile --silent",
     "cov:compile:unit": "OUT_DIR=.nyc_output_unit GEO_DIR=coverage npm run cov:compile",
     "cov:compile:changes": "OUT_DIR=.nyc_output_changes GEO_DIR=coverage_changes npm run cov:compile",
     "cov:report:full": "nyc report --reporter=html",
     "cov:report:unit": "nyc report --temp-dir=.nyc_output_unit --report-dir=coverage_unit --reporter=html",
     "cov:report:changes": "nyc report --temp-dir=.nyc_output_changes --report-dir=coverage_changes --reporter=json-summary",
-    "test:e2e": "cross-env SUPPRESS_NO_CONFIG_WARNING=true DATA_DIR=./test/provider-data jest",
+    "cov:clean": "node ci/clean-coverage.js && npm run cov:clean --workspaces",
+    "cov:changes:2:md": "node ci/format-branch-coverage-changes.js",
     "version": "changeset version",
     "release:npm": "changeset publish",
     "release:github": "node gh-release.js",
     "changeset:add": "changeset",
-    "demo": "node demo/index.js",
-    "clean:cov": "node ci/clean-coverage.js && npm run clean:cov --workspaces",
-    "cov:md": "node ci/format-branch-coverage-changes.js"
+    "demo": "node demo/index.js"
   },
   "repository": {
     "type": "git",
