chore: fix workflow

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "cov:full": "npm run cov:full --workspaces --silent && npm run cov:compile:full && npm run cov:report:full",
     "cov:unit": "npm run cov:unit --workspaces && npm run cov:compile:unit && npm run cov:report:unit",
     "cov:changes": "npm run cov:changes --workspaces --silent && npm run cov:compile:changes && npm run cov:report:changes",
-    "cov:compile": "rm -rf .nyc_output_changes && nyc merge packages/cache-memory/$OUT_DIR $OUT_DIR/cache-memory.json 2>/dev/null || : && nyc merge packages/featureserver/$OUT_DIR $OUT_DIR/featureserver.json 2>/dev/null || : && nyc merge packages/core/$OUT_DIR $OUT_DIR/core.json 2>/dev/null || : && nyc merge packages/logger/$OUT_DIR $OUT_DIR/logger.json 2>/dev/null || : && cp packages/output-geoservices/$GEO_DIR/coverage-final.json $OUT_DIR/output-geoservices.json 2>/dev/null || : && nyc merge packages/winnow/$OUT_DIR $OUT_DIR/winnow.json 2>/dev/null || :",
+    "cov:compile": "nyc merge packages/cache-memory/$OUT_DIR $OUT_DIR/cache-memory.json 2>/dev/null || : && nyc merge packages/featureserver/$OUT_DIR $OUT_DIR/featureserver.json 2>/dev/null || : && nyc merge packages/core/$OUT_DIR $OUT_DIR/core.json 2>/dev/null || : && nyc merge packages/logger/$OUT_DIR $OUT_DIR/logger.json 2>/dev/null || : && cp packages/output-geoservices/$GEO_DIR/coverage-final.json $OUT_DIR/output-geoservices.json 2>/dev/null || : && nyc merge packages/winnow/$OUT_DIR $OUT_DIR/winnow.json 2>/dev/null || :",
     "cov:compile:full": "OUT_DIR=.nyc_output GEO_DIR=coverage npm run cov:compile --silent",
     "cov:compile:unit": "OUT_DIR=.nyc_output_unit GEO_DIR=coverage npm run cov:compile",
-    "cov:compile:changes": "OUT_DIR=.nyc_output_changes GEO_DIR=coverage_changes npm run cov:compile",
+    "cov:compile:changes": "npm run cov:clean && mkdir .nyc_output_changes && OUT_DIR=.nyc_output_changes GEO_DIR=coverage_changes npm run cov:compile",
     "cov:report:full": "nyc report --reporter=html",
     "cov:report:unit": "nyc report --temp-dir=.nyc_output_unit --report-dir=coverage_unit --reporter=html",
     "cov:report:changes": "nyc report --temp-dir=.nyc_output_changes --report-dir=coverage_changes --reporter=json-summary",
