--- a/package.json
+++ b/package.json
@@ -11,19 +11,12 @@
     "commit": "cz",
     "precommit": "lint-staged && npm test --workspaces",
     "test": "npm test --workspaces",
-    "test:quiet": "npm test:quiet --workspaces",
     "test:e2e": "cross-env SUPPRESS_NO_CONFIG_WARNING=true DATA_DIR=./test/provider-data jest",
-    "cov:full": "npm run cov:full --workspaces --silent && npm run cov:compile:full && npm run cov:report:full",
-    "cov:unit": "npm run cov:unit --workspaces && npm run cov:compile:unit && npm run cov:report:unit",
-    "cov:changes": "npm run cov:changes --workspaces --silent && npm run cov:compile:changes && npm run cov:report:changes",
-    "cov:compile": "nyc merge packages/cache-memory/$OUT_DIR $OUT_DIR/cache-memory.json 2>/dev/null || : && nyc merge packages/featureserver/$OUT_DIR $OUT_DIR/featureserver.json 2>/dev/null || : && nyc merge packages/core/$OUT_DIR $OUT_DIR/core.json 2>/dev/null || : && nyc merge packages/logger/$OUT_DIR $OUT_DIR/logger.json 2>/dev/null || : && cp packages/output-geoservices/$GEO_DIR/coverage-final.json $OUT_DIR/output-geoservices.json 2>/dev/null || : && nyc merge packages/winnow/$OUT_DIR $OUT_DIR/winnow.json 2>/dev/null || :",
-    "cov:compile:full": "OUT_DIR=.nyc_output GEO_DIR=coverage npm run cov:compile --silent",
-    "cov:compile:unit": "OUT_DIR=.nyc_output_unit GEO_DIR=coverage npm run cov:compile",
-    "cov:compile:changes": "npm run cov:clean && mkdir .nyc_output_changes && OUT_DIR=.nyc_output_changes GEO_DIR=coverage_changes npm run cov:compile",
-    "cov:report:full": "nyc report --reporter=html",
-    "cov:report:unit": "nyc report --temp-dir=.nyc_output_unit --report-dir=coverage_unit --reporter=html",
-    "cov:report:changes": "nyc report --temp-dir=.nyc_output_changes --report-dir=coverage_changes --reporter=json-summary",
-    "cov:clean": "node ci/clean-coverage.js && npm run cov:clean --workspaces",
+    "cov:all:html": "node ci/run-test-coverage-analysis && node ci/merge-coverage-changes && nyc report --temp-dir=.coverage/all --reporter=html --report-dir=.coverage_html",
+    "cov:unit:html": "node ci/run-test-coverage-analysis --context=unit && node ci/merge-coverage-changes --context=unit && nyc report --temp-dir=.coverage/all --reporter=html --report-dir=.coverage_html",
+    "cov:unit:json": "node ci/run-test-coverage-analysis --context=unit && node ci/merge-coverage-changes && nyc report --temp-dir=.coverage/all --reporter=json-summary --report-dir=.coverage_json",
+    "cov:changes:json": "npm run cov:clean && node ci/run-coverage-on-branch-changes.js && node ci/merge-coverage-changes --context=changes && node ci/run-report-on-branch-changes",
+    "cov:clean": "node ci/clean-coverage",
     "cov:changes:2:md": "node ci/format-branch-coverage-changes.js",
     "version": "changeset version",
     "release:npm": "changeset publish",
@@ -78,7 +71,8 @@
     "shelljs": "^0.8.5",
     "simple-git": "^3.22.0",
     "snyk": "^1.1280.0",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "yargs": "^17.7.2"
   },
   "config": {
     "commitizen": {
