--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -67,12 +67,6 @@
     "url": "git://github.com/koopjs/koop.git"
   },
   "scripts": {
-    "test": "mocha '**/*.spec.js' ",
-    "test:quiet": "npm test > /dev/null",
-    "cov:unit": "nyc -r=json-summary mocha '**/*.spec.js' && npm run cov:badge",
-    "cov:full": "nyc -r=json-summary mocha '**/*.spec.js' && npm run cov:badge",
-    "cov:badge": "coverage-badges-cli --output ./coverage.svg",
-    "cov:changes": "node ../../ci/run-coverage-on-branch-changes.js",
-    "cov:clean": "node ../../ci/clean-coverage.js"
+    "test": "mocha '**/*.spec.js' "
   }
 }
