--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -10,7 +10,7 @@
     "test": "tape **/*.spec.js | tap-spec",
     "test:unit": "tape src/**/*.spec.js | tap-spec",
     "benchmark": "node benchmark/index.js",
-    "benchmark:ci": "node benchmark/index.js | tee benchmark-result.txt",
+    "benchmark:ci": "node benchmark/index.js | tee benchmark-result.txt"
   },
   "repository": {
     "type": "git",
