--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -57,10 +57,10 @@
     "js-sql-parser": "^1.5.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "murmurhash": "^2.0.1",
     "ngeohash": "^0.6.3",
     "proj4": "^2.10.0",
     "simple-statistics": "^7.8.3",
-    "string-hash": "^1.1.3",
     "wkt-parser": "^1.3.3"
   },
   "devDependencies": {
