chore: add conditions to CI-tests on master

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -30,16 +30,21 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install npm 7
+      if: github.triggering_actor == 'CI Agent'
       run: npm i -g npm@7 --registry=https://registry.npmjs.org
       
     - name: Install
+      if: github.triggering_actor == 'CI Agent'
       run: npm ci
 
     - name: Lint
+      if: github.triggering_actor == 'CI Agent'
       run: npm run lint:ci
 
     - name: Unit tests
+      if: github.triggering_actor == 'CI Agent'
       run: npm test --workspaces
     
     - name: E2E tests
+      if: github.triggering_actor == 'CI Agent'
       run: npm run test:e2e
