--- a/packages/cache-memory/package.json
+++ b/packages/cache-memory/package.json
@@ -4,7 +4,7 @@
   "description": "An in-memory cache for KOop",
   "main": "src/index.js",
   "scripts": {
-    "test": "tape src/**/*.spec.js | tap-spec"
+    "test": "tape src/**/*.spec.js | tap-min"
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/koopjs/koop#readme",
   "devDependencies": {
-    "tap-spec": "^5.0.0",
+    "tap-min": "^3.0.0",
     "tape": "^5.7.5",
     "uuid": "^9.0.1"
   },
