--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "even-more-min": "^1.0.1",
     "mocha": "^10.3.0",
     "proxyquire": "^2.1.3",
     "should": "^13.2.3",
@@ -67,6 +68,6 @@
     "url": "git://github.com/koopjs/koop.git"
   },
   "scripts": {
-    "test": "mocha '**/*.spec.js' "
+    "test": "mocha '**/*.spec.js' --reporter even-more-min  --recursive -t 5000"
   }
 }
