--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha '**/*.spec.js' --recursive -t 5000",
-    "test:unit": "mocha 'src/**/*.spec.js' --recursive -t 5000"
+    "test": "mocha '**/*.spec.js' --reporter even-more-min --recursive -t 5000",
+    "test:unit": "mocha 'src/**/*.spec.js' --reporter even-more-min --recursive -t 5000"
   },
   "contributors": [
     {
@@ -36,6 +36,7 @@
     "wkt-parser": "^1.3.3"
   },
   "devDependencies": {
+    "even-more-min": "^1.0.1",
     "express": "^4.18.2",
     "mocha": "^10.3.0",
     "nyc": "^15.1.0",
