--- a/packages/output-geoservices/package.json
+++ b/packages/output-geoservices/package.json
@@ -4,7 +4,7 @@
   "description": "Wraps FeatureServer as a Koop output plugin",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --silent"
   },
   "repository": {
     "type": "git",
