--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "tape **/*.spec.js | tap-spec",
-    "test:unit": "tape src/**/*.spec.js | tap-spec",
+    "test": "tape **/*.spec.js --reporter=silent | tap-min",
+    "test:unit": "tape src/**/*.spec.js | tap-min",
     "benchmark": "node benchmark/index.js",
     "benchmark:ci": "node benchmark/index.js | tee benchmark-result.txt"
   },
@@ -68,7 +68,7 @@
     "fs-extra": "^11.2.0",
     "proxyquire": "^2.1.3",
     "sinon": "^17.0.1",
-    "tap-spec": "^5.0.0",
+    "tap-min": "^3.0.0",
     "tape": "^5.7.5"
   },
   "optionalDependencies": {
