chore: remove single quotes

--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "tape '**/*.spec.js' | tap-min",
+    "test": "tape **/*.spec.js | tap-min",
     "test:unit": "tape 'src/**/*.spec.js' | tap-min",
     "benchmark": "node benchmark/index.js",
     "benchmark:ci": "node benchmark/index.js | tee benchmark-result.txt"
