--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   pr-tests:
-    name: Install, lint, test
+    name: Install, lint, test, report coverage changes
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
