Refactor: use restInfo handler directly in output-geoservice (#967)
* refactor: use restInfo handler directly

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -5,11 +5,13 @@ on:
     branches:
       - master
       - beta
+      - next
     paths:
       - "./.github/**.yml"
       - "**/packages/**.js"
       - "**/packages/**/package.json"
       - "test/**/*.js"
+      - "ci/**/*.js"
 
 jobs:
   pr-tests:
