--- a/packages/featureserver/package.json
+++ b/packages/featureserver/package.json
@@ -7,8 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha '**/*.spec.js' --reporter even-more-min --recursive -t 5000",
-    "test:unit": "mocha 'src/**/*.spec.js' --reporter even-more-min --recursive -t 5000"
+    "test": "mocha '**/*.spec.js' --reporter even-more-min --recursive -t 5000"
   },
   "contributors": [
     {
