--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -49,7 +49,13 @@
     "@terraformer/arcgis": "^2.1.2",
     "@terraformer/spatial": "^2.1.2",
     "@turf/bbox-polygon": "^6.5.0",
+    "@turf/boolean-contains": "^6.5.0",
+    "@turf/boolean-equal": "^6.5.0",
+    "@turf/boolean-intersects": "^6.5.0",
+    "@turf/boolean-within": "^6.5.0",
     "@turf/centroid": "^6.5.0",
+    "@turf/envelope": "^6.5.0",
+    "@turf/flatten": "^6.5.0",
     "@types/geojson": "^7946.0.14",
     "alasql": "^4.3.3",
     "classybrew": "0.0.3",
@@ -64,6 +70,7 @@
     "wkt-parser": "^1.3.3"
   },
   "devDependencies": {
+    "@turf/helpers": "^6.5.0",
     "benchmark": "^2.1.4",
     "fs-extra": "^11.2.0",
     "proxyquire": "^2.1.3",
